--- a/lab4/res/style.css
+++ b/lab4/res/style.css
@@ -8,7 +8,7 @@ body {
     overflow: hidden;
     margin: 0;
     padding: 0;
-    font-family: Arial;
+    font-family:Helvetica;
 }
 nav {
     width: 100%;
@@ -28,7 +28,7 @@ ul{
 li{
     float: left;
 }
-a{
+li a{
     padding: 20px;
     width: 100px;
     display: block ;
